fix: adjust z-index

--- a/src/views/index.less
+++ b/src/views/index.less
@@ -86,6 +86,7 @@
   }
 
   > footer {
+    z-index: 2;
 
     /deep/ .el-select {
       position: absolute;
